--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,13 +12,14 @@
         <item name="backgroundTint">@null</item>
         <item name="android:textColor">#554238</item>
         <item name="android:textSize">22sp</item>
-    </style>
+        <item name="android:stateListAnimator">@null</item>    </style>
 
     <style name="operator_btn_background">
         <item name="android:backgroundTint">@null</item>
         <item name="backgroundTint">@null</item>
         <item name="android:textColor">#F8F8F8</item>
         <item name="android:textSize">22sp</item>
+        <item name="android:stateListAnimator">@null</item>
     </style>
 
 </resources>
