--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,6 +3,7 @@
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingBottom="12dp"
     android:fillViewport="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -34,12 +35,11 @@
             app:layout_constraintTop_toTopOf="@id/textinput_placeholder">
 
             <TextView
-                android:id="@+id/solution"
+                android:id="@+id/previous"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="40dp"
                 android:layout_weight="1"
-                android:text="=4"
                 android:textColor="#55423866"
                 android:textSize="20sp" />
 
@@ -320,7 +320,7 @@
             android:layout_width="76dp"
             android:layout_height="76dp"
             android:layout_marginTop="4dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="36dp"
             android:background="@drawable/operation_background"
             android:gravity="center"
             android:text="="
