--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -77,7 +77,7 @@
             android:background="@drawable/operation_background"
             android:clickable="true"
             android:gravity="center"
-            android:text="/"
+            android:text="@string/divison"
             app:layout_constraintBottom_toTopOf="@id/times"
             app:layout_constraintEnd_toEndOf="@+id/times"
             app:layout_constraintStart_toStartOf="@+id/times" />
@@ -93,7 +93,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="%"
+            android:text="@string/remainder"
             app:layout_constraintBottom_toTopOf="@id/no_nine"
             app:layout_constraintEnd_toEndOf="@+id/no_nine"
             app:layout_constraintStart_toStartOf="@+id/no_nine" />
@@ -122,7 +122,7 @@
             android:clickable="true"
             android:gravity="center"
             android:padding="4dp"
-            android:text="AC"
+            android:text="@string/ac"
             app:layout_constraintBottom_toTopOf="@id/no_seven"
             app:layout_constraintEnd_toEndOf="@+id/no_seven"
             app:layout_constraintStart_toStartOf="@+id/no_seven"
@@ -138,7 +138,7 @@
             android:background="@drawable/operation_background"
             android:clickable="true"
             android:gravity="center"
-            android:text="x"
+            android:text="@string/x"
             app:layout_constraintBottom_toTopOf="@id/plus"
             app:layout_constraintEnd_toEndOf="@+id/plus"
             app:layout_constraintStart_toStartOf="@+id/plus" />
@@ -153,7 +153,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="9"
+            android:text="@string/_9"
             app:layout_constraintEnd_toEndOf="@+id/no_four"
             app:layout_constraintStart_toStartOf="@+id/no_four"
             app:layout_constraintTop_toBottomOf="@id/reminder" />
@@ -168,7 +168,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="8"
+            android:text="@string/_8"
             app:layout_constraintEnd_toEndOf="@+id/no_five"
             app:layout_constraintStart_toStartOf="@+id/no_five"
             app:layout_constraintTop_toBottomOf="@id/back" />
@@ -183,7 +183,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="7"
+            android:text="@string/_7"
             app:layout_constraintEnd_toEndOf="@+id/no_six"
             app:layout_constraintStart_toStartOf="@+id/no_six"
             app:layout_constraintTop_toBottomOf="@id/clear" />
@@ -198,7 +198,7 @@
             android:background="@drawable/operation_background"
             android:clickable="true"
             android:gravity="center"
-            android:text="+"
+            android:text="@string/plus"
             app:layout_constraintBottom_toTopOf="@id/minus"
             app:layout_constraintEnd_toEndOf="@+id/times"
             app:layout_constraintStart_toStartOf="@id/minus"
@@ -215,7 +215,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="6"
+            android:text="@string/_6"
             app:layout_constraintBottom_toTopOf="@id/no_one"
             app:layout_constraintEnd_toEndOf="@+id/no_one"
             app:layout_constraintStart_toStartOf="@id/no_one"
@@ -232,7 +232,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="5"
+            android:text="@string/_5"
             app:layout_constraintBottom_toTopOf="@id/no_tow"
             app:layout_constraintEnd_toEndOf="@+id/no_tow"
             app:layout_constraintStart_toStartOf="@id/no_tow"
@@ -249,7 +249,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="4"
+            android:text="@string/_4"
             app:layout_constraintBottom_toTopOf="@id/no_three"
             app:layout_constraintEnd_toEndOf="@+id/no_three"
             app:layout_constraintStart_toStartOf="@+id/no_three"
@@ -263,7 +263,7 @@
             android:background="@drawable/operation_background"
             android:clickable="true"
             android:gravity="center"
-            android:text="-"
+            android:text="@string/minus"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toEndOf="@+id/equal"
             app:layout_constraintStart_toStartOf="@id/equal"
@@ -278,7 +278,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="3"
+            android:text="@string/_3"
             app:layout_constraintBottom_toBottomOf="@id/dot"
             app:layout_constraintEnd_toEndOf="@+id/dot"
             app:layout_constraintStart_toStartOf="@+id/dot"
@@ -293,7 +293,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="2"
+            android:text="@string/_2"
             app:layout_constraintBottom_toBottomOf="@id/no_zero"
             app:layout_constraintEnd_toEndOf="@+id/no_zero"
             app:layout_constraintStart_toStartOf="@id/no_zero"
@@ -308,7 +308,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="1"
+            android:text="@string/_1"
             app:layout_constraintBottom_toBottomOf="@id/minus_plus"
             app:layout_constraintEnd_toEndOf="@+id/minus_plus"
             app:layout_constraintStart_toStartOf="@id/minus_plus"
@@ -323,7 +323,7 @@
             android:layout_marginBottom="36dp"
             android:background="@drawable/operation_background"
             android:gravity="center"
-            android:text="="
+            android:text="@string/equal"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/dot"
@@ -338,7 +338,7 @@
             android:background="@drawable/button_background"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="."
+            android:text="@string/dot"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toStartOf="@id/equal"
             app:layout_constraintStart_toEndOf="@id/no_zero"
@@ -354,7 +354,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="0"
+            android:text="@string/_0"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toStartOf="@id/dot"
             app:layout_constraintStart_toEndOf="@id/minus_plus"
@@ -370,7 +370,7 @@
             android:clickable="true"
             android:gravity="center"
             android:onClick="onClickNumber"
-            android:text="±"
+            android:text="@string/plus_minus"
             app:layout_constraintBottom_toBottomOf="@id/equal"
             app:layout_constraintEnd_toStartOf="@id/no_zero"
             app:layout_constraintStart_toStartOf="parent"
